<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_primary">

    <ImageView
        android:id="@+id/image_on_boarding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/description_special_discounts"
        android:src="@drawable/img_on_boarding_3"

        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_on_boarding_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/large_margin"
        android:lineSpacingExtra="@dimen/line_spacing"
        android:text="@string/special_discounts"
        android:textColor="@color/white"
        android:textSize="@dimen/design_title_text_size"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@id/text_on_boarding_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_on_boarding" />

    <TextView
        android:id="@+id/text_on_boarding_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/large_margin"
        android:text="@string/on_boarding_1"
        android:textColor="@color/white"
        android:textDirection="rtl"
        android:textSize="@dimen/title_text_size"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_on_boarding_title" />
</androidx.constraintlayout.widget.ConstraintLayout>
